--- a/style.css
+++ b/style.css
@@ -43,6 +43,31 @@ body {
     flex-shrink: 0;
 }
 
+.archive_edge_intro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;;
+    position: relative;
+    width: 50vw;
+    max-width: 100%;
+    background-color: #000;
+    flex-shrink: 0;
+}
+.archive_edge_intro_text  {
+    padding: 2rem;
+}
+.archive_edge_intro p {
+    display: inline-flex;
+    flex-direction: column;
+    gap: 1rem;
+    color: white;
+    line-height: 4rem;
+    font-size: clamp(3rem, 2vw, 3.5rem);
+    text-wrap: balance;
+    text-align: center;
+}
+
 .profil {
     display: flex;
     justify-content: center;
@@ -52,10 +77,18 @@ body {
     gap: 5rem;
 }
 
+.profil_header {
+    text-align: center;
+    font-size: clamp(8rem, 5vw, 8rem);
+    color: white;
+}
+
+
 .profil_content {
     display: inherit;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 5rem;
 }
 
 .profil_content_avatar {
@@ -74,6 +107,12 @@ body {
 }
 .profil_content_name .name {
     font-size: 5rem;
+    color: #f1f1f1;
+}
+.profil_content_name .description {
+    color: gray;
+    font-size: 1.8rem;
+    margin-top: 1rem;
 }
 
 .profil_content_avatar img {
@@ -178,6 +217,9 @@ body {
     .index-item {
         width: 20px;
         height: 20px;
+    }
+    .archive_edge_intro_text {
+        display: none;
     }
 }
 
