--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@ body {
     align-items: center;
     height: 100%;
     position: relative;
-    width: 50vw;
-    max-width: 100%;
+    width: 100%;
+    max-width: 50vw;
     background-color: transparent;
     flex-shrink: 0;
 }
@@ -64,7 +64,7 @@ body {
     gap: 1rem;
     color: white;
     line-height: 4rem;
-    font-size: clamp(3rem, 2vw, 3.5rem);
+    font-size: clamp(1rem, 4vw, 3.5rem);
     text-wrap: balance;
     text-align: center;
 }
@@ -310,7 +310,12 @@ body {
         height: 20px;
     }
 
-    .archive_edge_intro_text {
+    .vector-svg {
+        inline-size: min(240%, 200vw);
+    }
+
+    .archive_edge_intro {
+        max-width: 100vw;
     }
 
     .archive_slider_figure {
